# sandhi

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASING.md
.githooks/: README.md  commit-msg  pre-push
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish-crates.yml  release.yml
.victor/: chat_history  checkpoints.db  graph-watch.json  profile_learning.db  project.db-shm  undo.db-shm  undo.db-wal
.victor/backups/: TD-0003-operator-surface-keys-budgets-attribution.md.20260722_105341.backup
bindings/node/: Cargo.toml  README.md  contracts.d.ts  package-lock.json  package.json  sandhi.d.ts  sandhi.js
bindings/node/__test__/: gateway.test.mjs
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml  sandhi_gateway.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_gateway.py
crates/sandhi-core/: Cargo.toml
crates/sandhi-core/examples/: export_chat_schemas.rs
crates/sandhi-core/schemas/: anthropic_message_usage.schema.json
crates/sandhi-core/src/: alerts.rs  budget.rs  chat.rs  event.rs  keys.rs  ledger.rs  lib.rs  sink.rs  usage.rs
crates/sandhi-providers/: Cargo.toml
crates/sandhi-providers/src/: anthropic.rs  anthropic_typed.rs  catalog.rs  cohere.rs  cohere_typed.rs  embed.rs  escape_hatch.rs  gemini.rs  gemini_typed.rs  lib.rs  local.rs  metering.rs  ollama_typed.rs  openai.rs  openai_responses.rs  openai_responses_typed.rs  openai_roles.rs  raw.rs  resilience.rs  typed.rs  usage.rs
crates/sandhi-providers/tests/: anthropic_corpus.rs  differential_oracle.rs  provider_corpus.rs  timeout.rs
crates/sandhi-providers/tests/fixtures/anthropic/: stream_cache_split.sse  stream_forward_compat.sse
crates/sandhi-providers/tests/fixtures/cohere/: complete.json  expected_usage.json  stream.sse  stream_forward_compat.sse
crates/sandhi-providers/tests/fixtures/gemini/: complete.json  stream.sse  stream_forward_compat.sse
crates/sandhi-providers/tests/fixtures/ollama/: stream.ndjson  stream_forward_compat.ndjson
crates/sandhi-providers/tests/fixtures/openai/: complete.json  stream.sse  stream_forward_compat.sse
crates/sandhi-providers/tests/schemas/: anthropic_message_usage.schema.json  openai_completion_usage.schema.json
crates/sandhi-proxy/: Cargo.toml
crates/sandhi-proxy/src/: cli.rs  codec.rs  ledger.rs  lib.rs  main.rs  operator.rs
crates/sandhi-proxy/tests/: operator.rs  proxy.rs
crates/sandhi-store/: Cargo.toml
crates/sandhi-store/src/: alerts.rs  ledger.rs  lib.rs  vault.rs  vkeys.rs
docs/adr/: 0001-sandhi-architecture-and-wire-contract.md  0002-provider-transport-scope-and-modality-admission.md  0003-provider-adapter-authoring-and-codegen.md  0004-two-plane-proxy-and-enforcement-boundary.md  0005-enforcement-correctness-reservation-ledger-observe-enforce-split.md
docs/td/: TD-0001-provider-adapter-qa-and-codegen.md  TD-0002-typed-provider-runtime.md  TD-0003-operator-surface-keys-budgets-attribution.md  TD-0004-catalog-governance-dual-mode.md  TD-0005-declarative-policy-engine.md  TD-0006-two-plane-proxy-transparent-metering.md  TD-0007-enforcement-ledger-backends.md
schemas/: chat-request.v1.schema.json  chat-response.v1.schema.json  chat-stream-event.v1.schema.json  provider-descriptor.v1.schema.json  provider-error.v1.schema.json  usage-event.v1.schema.json  usage.v2.schema.json
scripts/: check_no_agent_attribution.py  coverage-bindings.sh  gen-binding-contract-facades.py  gen-chat-contract-schemas.sh  gen-provider-models.sh
