[package]
name = "sandhi-node"
description = "napi binding for Sandhi (published to npm as @anvai-labs/sandhi)."
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anvai-labs/sandhi"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# tokio_rt: lets `#[napi] async fn` bridge a Rust future to a JS Promise on napi's own tokio
# runtime (the napi analogue of PyO3's pyo3-async-runtimes) — powers the transport surface.
napi = { version = "2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2"
sandhi-core = { path = "../../crates/sandhi-core" }
serde_json = "1"
reqwest = { version = "0.12", default-features = false }
time = { version = "0.3", features = ["formatting"] }

# Transport binding (ADR-0047 D10 step 3c — napi/TS parity): expose sandhi-providers' async provider
# transport to Node. `tokio` (sync) supplies the mpsc channel that decouples the background stream
# driver from the JS-side pull; `futures-util` drives the Rust `Stream`.
sandhi-providers = { path = "../../crates/sandhi-providers" }
tokio = { version = "1", features = ["sync"] }
futures-util = "0.3"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"

# Its OWN workspace root — built via napi, not the root `cargo build --workspace`.
[workspace]
