[package]
name = "sandhi-gateway-py"
description = "PyO3 binding for Sandhi (published to PyPI as `sandhi-gateway`)."
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anvai-labs/sandhi"
publish = false

[lib]
name = "sandhi_gateway"
crate-type = ["cdylib"]

[dependencies]
# abi3-py39: build a single stable-ABI wheel per platform that installs on CPython 3.9+
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py39"] }
sandhi-core = { path = "../../crates/sandhi-core" }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }

# Intentionally its OWN workspace root — this crate builds via maturin (bindings), not as a
# member of the root `cargo build --workspace`. Without this, Cargo errors that the package
# "believes it's in a workspace when it's not".
[workspace]
