[package]
name = "sandhi-gateway-py"
description = "PyO3 binding for Sandhi (published to PyPI as `sandhi-gateway`)."
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/anvai-labs/sandhi"
publish = false

[lib]
name = "sandhi_gateway"
crate-type = ["cdylib"]

[dependencies]
# abi3-py311: one stable-ABI wheel per platform installs on CPython 3.11+ (matches victor's
# floor; 3.9 is EOL and 3.10 EOLs 2026-10).
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py311"] }
sandhi-core = { path = "../../crates/sandhi-core" }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }

# Transport binding (ADR-0047 D10 step 3): expose sandhi-providers' async provider transport to
# Python so the in-house apps route provider calls through sandhi in-process. pyo3-async-runtimes
# tracks pyo3's minor (0.22 → 0.22) and bridges the tokio future to a Python awaitable.
sandhi-providers = { path = "../../crates/sandhi-providers" }
tokio = { version = "1", features = ["rt-multi-thread"] }
pyo3-async-runtimes = { version = "0.22", features = ["tokio-runtime"] }

# Intentionally its OWN workspace root — this crate builds via maturin (bindings), not as a
# member of the root `cargo build --workspace`. Without this, Cargo errors that the package
# "believes it's in a workspace when it's not".
[workspace]
