[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "sandhi-gateway"
description = "Sandhi — the metering layer for AI agents (Python binding of the Rust core). The bare name `sandhi` on PyPI is an unrelated Sanskrit-linguistics library."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
readme = "README.md"
keywords = ["llm", "gateway", "usage", "metering", "attribution", "ai"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/anvai-labs/sandhi"
Source = "https://github.com/anvai-labs/sandhi"

[tool.maturin]
# PyO3 extension module. Import as `import sandhi_gateway`.
module-name = "sandhi_gateway"
features = ["pyo3/extension-module"]
