[package]
name = "sandhi-core"
description = "Sandhi core: usage accounting, virtual keys, budgets, and the neutral usage-event wire types."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
