[package]
name = "sandhi-providers"
description = "Sandhi unified provider transport: adapter trait + Anthropic/OpenAI-compat/Gemini/Bedrock/Cohere/local adapters, with usage extracted at the source."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sandhi-core = { path = "../sandhi-core", version = "0.1.0" }
time = { version = "0.3", features = ["formatting"] }
async-trait = "0.1"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
tokio = { version = "1", features = ["time"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
# TD-0001 W2 differential oracle (ADR-0003 §3): typify generates an independent deserializer
# from a byte-pinned provider schema; test-only, never linked into the shipped crate/bindings.
typify = "0.7"
serde = { version = "1", features = ["derive"] }
