[package]
name = "sandhi-proxy"
description = "Sandhi reverse-proxy: sandhi-core + sandhi-providers + an HTTP listener. In-path (inline) egress gate with virtual keys + budgets + usage metering + the TD-0003 operator surface (key vault, admin API, sandhi CLI)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sandhi_proxy"
path = "src/lib.rs"

[[bin]]
name = "sandhi-proxy"
path = "src/main.rs"

[[bin]]
name = "sandhi"
path = "src/cli.rs"

[dependencies]
sandhi-core = { path = "../sandhi-core", version = "0.1.2" }
sandhi-providers = { path = "../sandhi-providers", version = "0.1.2" }
sandhi-store = { path = "../sandhi-store", version = "0.1.2" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.7"
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting"] }
# TD-0003 P1 operator CLI (thin HTTP client to the admin API).
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"
async-trait = "0.1"
