[package]
name = "sandhi-store"
description = "Durable SQLite sink + usage aggregation queries for Sandhi. Not depended on by the language bindings (keeps the wheels free of bundled SQLite)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
sandhi-core = { path = "../sandhi-core", version = "0.1.2" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
time = { version = "0.3", features = ["formatting"] }
getrandom = "0.2"
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "linux-native",
] }
